--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,11 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Readex+Pro:wght@400;700&display=swap");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 html {
-  @apply bg-zinc-900 text-zinc-100;
+  @apply dark:bg-zinc-900 dark:text-zinc-100;
 
   font-family: "Readex Pro", sans-serif;
 }
